
2010-01-27  Cedric BAIL

	* Improve security by zeroying cipher material as soon as possible.

2010-03-01  Albin Tonnerre

	* Fix override of global symbols.

2010-03-15  Adam Simpkins / Cedric BAIL

	* Fix clearcache race condition.

2010-04-02  Cedric BAIL

	* Fix eet_data_node_read_cipher return type.
	* Add Eet_Connection.

2010-04-07  Cedric BAIL

	* Improve eet_eina_file_data_descriptor_class_set by using
	eina_hash_direct_add to avoid duplication hash key string.

2010-04-08  Cedric BAIL

	* Fix file corruption reported by Tiago Falcao <tiago@profusion.mobi>

2010-04-09  Cedric BAIL

	* Add eet_sync.
	* Only delete the file at the last possible time.
	* Reduce open file descriptor.

2010-04-16  Cedric BAIL

	* Handle fixed point in data stream.

2010-04-21  Cedric BAIL

	* Add EET_G_UNION and EET_G_VARIANT.

2010-05-29  Carsten Haitzler (The Rasterman)

	* Add EET_VERSION_MAJOR, EET_VERSION_MINOR.
        * Add Eet_Version, eet_version.
        * Make configure.ac use m4 defines for version
        * Support SVN revision in version check

2010-06-07  Carsten Haitzler (The Rasterman)

        * Release eet 1.3.0

2010-06-27  Carsten Haitzler (The Rasterman)

        * Release eet 1.3.2

2010-06-29  Vincent Torri

        * On Windows 64, long is of size 32 bits and not 64 bits. Also
	LONG_BIT is not defined on Windows.

2010-06-29  Cedric BAIL

	* Add eet_alias support.
	* Fix possible dead lock in eet_write_cipher.

2010-07-08  Carsten Haitzler (The Rasterman)

        * Moved Eet.h into $includedir/eet-MAJOR_VERSION/

2010-07-15  Vincent Torri

        * Add native Windows thread support instead of using pthread
	(less overhead). On other OS, pthread is still used by default.
	Pass --enable-win32-threads to activate thread support on
	Windows.

2010-07-20  Cedric BAIL

	* Improve file change detection in eet_open by checking size also.

2010-08-02  Cedric BAIL

	* Fix bug in eet_connection code when running on 32bits machine.