@@ -2381,6 +2381,30 @@ EAPI void *    eet_data_descriptor_encode(Eet_Data_Descriptor *edd,
      } while (0)
 
 /**
+ * Add a hash of string to a data descriptor
+ * @param edd The data descriptor to add the type to.
+ * @param struct_type The type of the struct.
+ * @param name The string name to use to encode/decode this member
+ *        (must be a constant global and never change).
+ * @param member The struct member itself to be encoded.
+ *
+ * This macro lets you easily add a hash of string. All the
+ * parameters are the same as for EET_DATA_DESCRIPTOR_ADD_BASIC().
+ *
+ * @since 1.3.4
+ * @ingroup Eet_Data_Group
+ */
+#define EET_DATA_DESCRIPTOR_ADD_HASH_STRING(edd, struct_type, name, member)\
+   do {\
+        struct_type ___ett;\
+\
+        eet_data_descriptor_element_add(edd, name, EET_T_STRING, EET_G_HASH,\
+                                        (char *)(& (___ett.member)) -\
+                                        (char *)(& (___ett)),\
+                                        0, /* 0,  */ NULL, subtype);\
+     } while (0)
+
+/**
  * Add a fixed size array type to a data descriptor
  * @param edd The data descriptor to add the type to.
  * @param struct_type The type of the struct.
